# Photobooth

./: .gitignore  CMakeLists.txt
cmake/modules/: FindGphoto2.cmake
gallery/: CMakeLists.txt
gallery/include/: ImageGallery.h  ImageView.h  Texture.h  Window.h
gallery/src/: ImageGallery.cpp  ImageView.cpp  Texture.cpp  Window.cpp
include/: CameraController.h  GPIO.h  ImageView.h  Math.h  Photobooth.h  Texture.h  Utils.h  Window.h  gpio.h  wiringPi.h
src/: CameraController.cpp  GPIO.cpp  ImageView.cpp  Math.cpp  Photobooth.cpp  Texture.cpp  Window.cpp  gpio.cpp  main.cpp
